--- a/static/css/components/mybooks-menu.less
+++ b/static/css/components/mybooks-menu.less
@@ -249,7 +249,7 @@
   }
 }
 
-@media only screen and (min-width: @width-breakpoint-desktop) {
+@media only screen and (min-width: (@width-breakpoint-tablet + 1)) {
   .mybooks-menu-mobile {
     display: none;
   }
